# LibRendererOpenGl

./: .gitattirbutes  .gitignore  CMakeLists.txt  README.md
ModernOpenGL/: CMakeLists.txt
ModernOpenGL/include/: Camera.h  CameraG0.h  CollisionManager.h  EmptyGM.h  GameObject.h  ITransformable.h  Light.h  Model.h  PlayerGO.h  ResourceManager.h  RigidBody.h  Shader.h  Texture.h  VAO.h  VBO.h  stb_image.h
ModernOpenGL/shaders/: frag1.txt  vert1.txt
ModernOpenGL/src/: Camera.cpp  CameraG0.cpp  EBO.cpp  EntityManager.cpp  IResource.cpp  ITransformable.cpp  Light.cpp  Model.cpp  PlayerGO.cpp  ResourceManager.cpp  RigidBody.cpp  Shader.cpp  Texture.cpp  VAO.cpp  glad.c  main.cpp
assets/meshes/: Text.txt
dependencies/GLAD/glad/: glad.c  glad.h
dependencies/LibMath/: LibMath.vcxproj  LibMath.vcxproj.filters
dependencies/glad/include/glad/: glad.h
dependencies/glfw3/lib/: glfw3.lib
source/include/: AllGO.h  Camera.h  CameraG0.h  CollisionManager.h  EBO.h  EntityManager.h  GameObject.h  IResource.h  ITransformable.h  Light.h  Model.h  PlayerGO.h  ResourceManager.h  RigidBody.h  Texture.h  WallGO.h  stb_image.h
source/include/LibMath/: Arithmetic.h  Interpolation.h  Matrix.h  Matrix4Vector4Operation.h  Trigonometry.h
source/include/LibMath/Angle/: Degree.h  Radian.h
source/include/LibMath/Matrix/: Matrix2.h  Matrix3.h  Matrix4.h  MatrixInternal.h
source/include/LibMath/Vector/: Vector2.h  Vector3.h  Vector4.h
source/shaders/: frag1.txt  shaderBuffer.txt  vert1.txt
source/src/: Camera.cpp  CameraG0.cpp  CollisionManager.cpp  EmptyGM.cpp  EntityManager.cpp  GameObject.cpp  IResource.cpp  ITransformable.cpp  Model.cpp  PlayerGO.cpp  ResourceManager.cpp  RigidBody.cpp  Shader.cpp  VBO.cpp  WallGO.cpp  main.cpp
source/src/LibMath/: Angle.cpp  Arithmetic.cpp  Matrix.cpp  Trigonometry.cpp  Vector.cpp
